--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "gulp-gh-pages": "^0.5.4",
     "highlightjs": "^9.10.0",
     "highlightjs-solidity": "^1.0.6",
-    "node-sass": "^4.8.2"
+    "node-sass": "^4.9.3"
   },
   "devDependencies": {
-    "browser-sync": "*",
+    "browser-sync": "^2.24.6",
     "del": "^3.0.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-clean-css": "^3.9.3",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^5.1.0",
     "gulp-imagemin": "^4.1.0",
@@ -28,6 +28,6 @@
     "gulp-newer": "^1.4.0",
     "gulp-notify": "*",
     "gulp-sass": "^3.2.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.1"
   }
 }
