--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: ruby
 rvm:
   - 2.2
 install: gem install ruby_dep -v 1.3.1 && gem install jekyll -v 2.4.0 && gem install s3_website
-script: jekyll build
+before_script:
+  - npm install -g gulp-cli
+script: gulp dist
 after_success: s3_website push
 branches:
   only:
