--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: ruby
 rvm:
   - 2.2
 install: gem install ruby_dep -v 1.3.1 && gem install jekyll -v 2.4.0 && gem install s3_website
-before_script:
-  - npm install -g gulp-cli
-script: gulp dist
+script: jekyll build
 after_success: s3_website push
 branches:
   only:
